# cer

./: .gitignore  CMakeLists.txt  README.md  package_ament.xml  package_catkin.xml  visual_odometry.launch  wheel_odometry.launch
app/: CMakeLists.txt
app/GoAndPoint/: CMakeLists.txt
app/GoAndPoint/scripts/: GoAndPoint_R1_SIM.xml
app/R1navigation/: CMakeLists.txt
app/baseControl/: CMakeLists.txt
app/camera/: CMakeLists.txt  cameras_calib.xml
app/cameraCalibration/: CMakeLists.txt
app/cerCluster/: CMakeLists.txt
app/depthDisplay/: CMakeLists.txt
app/faceExpression/: CMakeLists.txt
app/gesticulate/: CMakeLists.txt
app/greeting/: CMakeLists.txt  r1-greeting.xml  r1-sim-greeting.xml  r1_greeting.sh
app/handPointing/: CMakeLists.txt
app/idleManager/: CMakeLists.txt
app/idleMotions/: CMakeLists.txt
app/imagePatternRecognition/: CMakeLists.txt
app/navigation/: CMakeLists.txt  navigation.xml
app/pointHandTransform/: CMakeLists.txt
app/robotJoystickControl/: CMakeLists.txt
app/robots/: CMakeLists.txt  all_robots.xml
app/show_demo/: CMakeLists.txt
app/skinGui/: CMakeLists.txt
app/teleop/: CMakeLists.txt
app/tfPublisher/: CMakeLists.txt
app/tripodJoystickControl/: CMakeLists.txt
app/viconTest/: CMakeLists.txt
app/yarpmanager/: CMakeLists.txt
cermod/: CMakeLists.txt
cermod/boschIMU/: CMakeLists.txt  boschIMU.cpp  boschIMU.h  boschIMU.ini
cermod/cer2headpose/: CMakeLists.txt  cer2headpose.cpp  cer2headpose.h  cer2headpose.ini
cermod/cerDoubleLidar/: CMakeLists.txt  cerDoubleLidar.cpp  cerDoubleLidar.h  cerDoubleLidar.ini
cermod/cerOdometry/: CMakeLists.txt  CerOdometry.cpp  CerOdometry.h
cermod/faceDisplayClient/: CMakeLists.txt  faceDisplayClient.cpp  faceDisplayClient.h  faceDisplayClient.ini
cermod/faceDisplayServer/: CMakeLists.txt  IFaceDisplayInterface.h  faceDisplayServer.cpp  faceDisplayServer.h  faceDisplayServer.ini
cermod/oculus2cer/: CMakeLists.txt  oculus2cer.cpp  oculus2cer.h  oculus2cer.ini
cermod/r1face_mic/: CMakeLists.txt  CircularBuffer.cpp  CircularBuffer.h  r1face_mic.cpp  r1face_mic.h  r1face_mic.ini
cermod/tripod/: CMakeLists.txt  README.md  tripodMotionControl.cpp  tripodMotionControl.h
gazeboYarpPlugin/: CMakeLists.txt  GazeboTripodMotionControl.cpp  GazeboTripodMotionControl.h  GazeboTripod_Implementation.cpp  GazeboYarpTripod.cpp  GazeboYarpTripod.h  README.md
libraries/cer_kinematics/: CMakeLists.txt
libraries/cer_kinematics_alt/: CMakeLists.txt
libraries/cer_mobile_kinematics/: CMakeLists.txt
libraries/tripod/: CMakeLists.txt
misc/teleop-icub/: CMakeLists.txt  main.cpp
modules/: CMakeLists.txt
modules/altVelController/: CMakeLists.txt  VelocityController.cpp
modules/audioSplitter/: CMakeLists.txt  audioSplitter.cpp
modules/baseControl/: CMakeLists.txt  cer_motors.cpp  cer_motors.h  cer_odometry.h  controlThread.cpp  controlThread.h  filters.cpp  filters.h  geometry_msgs_PolygonStamped_msg.cmake  ikart_motors.cpp  ikart_motors.h  ikart_odometry.h  input.cpp  input.h  main.cpp  motors.cpp  motors.h  nav_msgs_Odometry_msg.cmake  odometry.cpp  odometry.h
modules/faceExpression/: CMakeLists.txt  Readme.md  drawingThread.cpp  drawingThread.hpp  earsThread.cpp  earsThread.hpp  eyesThread.cpp  eyesThread.hpp  faceExpressionImage.cpp  faceExpressionImage.hpp  main.cpp  mouthThread.cpp  mouthThread.hpp  utils.cpp  utils.hpp
modules/faceExpression_2/: CMakeLists.txt  drawingThread.cpp  earsThread.hpp  eyesThread.cpp  eyesThread.hpp  faceExpressionImage.hpp  mouthThread.cpp
modules/faceExpression_old/: CMakeLists.txt  Readme.md  faceExpressionImage.hpp  main.cpp
modules/gaze-controller/: CMakeLists.txt  README.md  main.cpp
modules/gesticulate/: CMakeLists.txt  README.md  gesticulate.cpp  gesticulate.h  gesticulateThread.cpp  gesticulateThread.h  main.cpp
modules/goAndPoint/: CMakeLists.txt  goAndPoint.cpp  goAndPoint.h  goAndPointThread.cpp  goAndPointThread.h  main.cpp
modules/handPointing/: CMakeLists.txt  README.md  goHomeRobot.cpp  goHomeRobot.h  handPointing.cpp  handPointing.h  handPointingThread.cpp  handPointingThread.h  main.cpp
modules/handPointingR1Mk3/: CMakeLists.txt  goHomeRobot.cpp  goHomeRobot.h  handPointing.cpp  handPointing.h  handPointingThread.cpp  handPointingThread.h  main.cpp
modules/idleManager/: CMakeLists.txt  README.md  idleManager.cpp  idleManager.h  idleMotions.cpp  idleMotions.h  main.cpp  motions.cpp
modules/idleMotions/: CMakeLists.txt  README.md  idleMotions.cpp  idleMotions.h  main.cpp  motions.cpp
modules/imagePatternRecognition/: CMakeLists.txt  MatchImage.cpp  README.md  imagePatternRecognition.cpp  imagePatternRecognition.h  main.cpp
modules/mobile-reaching/: CMakeLists.txt  README.md
modules/pointHandTransform/: CMakeLists.txt  PointHandTransformThread.cpp  PointHandTransformThread.h  goHomeRobot.cpp  goHomeRobot.h  main.cpp  pointHandTransform.cpp  pointHandTransform.h  pointHandTransformThread.cpp  pointHandTransformThread.h
modules/reaching/: CMakeLists.txt  README.md
modules/rgbdCalibrationTest/: CMakeLists.txt  controlThread.cpp  controlThread.h  main.cpp
modules/robotJoystickControl/: CMakeLists.txt  controlThread.cpp  controlThread.h  main.cpp
modules/selfCollision/: CMakeLists.txt  main.cpp
modules/teleop/: CMakeLists.txt  ParamParser.h  handThread.cpp  handThread.h  main.cpp
modules/textImage/: CMakeLists.txt  display.cpp  display.h  main.cpp  res.qrc
modules/textimage/: CMakeLists.txt  display.cpp  main.cpp  res.qrc
modules/tfPublisher/: CMakeLists.txt  main.cpp  tf.cpp  tf.h  tfModule.cpp  tfModule.h  tfframe.cpp  tfframe.h  tftree.cpp
modules/torsoJoystickControl/: CMakeLists.txt  controlThread.cpp  controlThread.h  main.cpp
modules/tripodJoystickControl/: CMakeLists.txt  controlThread.cpp  controlThread.h  main.cpp
tests/: CMakeLists.txt  test-cer_kinematics-b2b.cpp
tests/displayTest/: CMakeLists.txt  displayTest.cpp  displayTest.h
tests/rgbdCalibrationTest/: CMakeLists.txt  controlThread.cpp  controlThread.h  main.cpp
tests/tripodTest/: CMakeLists.txt  tripodTest.cpp  tripodTest.h
(+732 files in other folders)
