add_subdirectory(camera)
add_subdirectory(yarpmanager)
add_subdirectory(teleop)
add_subdirectory(cameraCalibration)
add_subdirectory(tripodJoystickControl)
add_subdirectory(faceExpression)
add_subdirectory(viconTest)
add_subdirectory(robotJoystickControl)
add_subdirectory(R1navigation)
add_subdirectory(depthDisplay)
add_subdirectory(skinGui)
add_subdirectory(pointHandTransform)
add_subdirectory(greeting)
